gitops/system/base/beyla/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: beyla
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: beyla
  ingress:
    # Prometheus scraping Beyla metrics
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # OTLP traces to Alloy
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
    # K8s API server (pod metadata discovery)
    - toEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
